fix: add missing truncate class

--- a/packages/core/src/styles/utilities.scss
+++ b/packages/core/src/styles/utilities.scss
@@ -15,3 +15,9 @@
     outline-offset: 2px;
   }
 }
+
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
